Fixed double borders on sidebar

--- a/Base/_common.scss
+++ b/Base/_common.scss
@@ -4842,3 +4842,7 @@ terminal-window box notebook{
 	border: 1px solid rgba( 255, 255, 255, 0.1) ; 
 }
 
+
+placessidebar .frame {
+	border: none;
+}
