--- a/Themes/Dark-Rounded-Transparent/gtk-3.0/gtk.css
+++ b/Themes/Dark-Rounded-Transparent/gtk-3.0/gtk.css
@@ -1937,6 +1937,8 @@ vte-terminal { padding: 10px; }
 
 terminal-window box notebook { border: 1px solid rgba(255, 255, 255, 0.1); }
 
+placessidebar .frame { border: none; }
+
 /* GTK NAMED COLORS ---------------- use responsibly! */
 /*
 widget text/foreground color */
